--- a/index.html
+++ b/index.html
@@ -1,1 +1,155 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Camouflage Search</title>
+    <style>
+        body {
+            margin: 0;
+            overflow: hidden;
+            height: 100vh;
+            background: linear-gradient(135deg, #556b2f, #8fbc8f);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            font-family: Arial, sans-serif;
+        }
 
+        canvas {
+            position: absolute;
+            top: 0;
+            left: 0;
+            z-index: 0;
+        }
+
+        .search-container {
+            position: relative;
+            z-index: 2;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+
+        .search-bar {
+            padding: 10px 20px;
+            font-size: 16px;
+            border: none;
+            border-radius: 5px;
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+            outline: none;
+            transition: transform 0.2s ease-in-out;
+        }
+
+        .search-bar:focus {
+            transform: scale(1.1);
+        }
+
+        iframe {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            border: none;
+            z-index: 3;
+            background-color: rgba(0, 0, 0, 0.7);
+        }
+    </style>
+</head>
+<body>
+    <canvas></canvas>
+    <div class="search-container">
+        <input type="text" class="search-bar" placeholder="Search..." id="searchBar">
+    </div>
+    <iframe id="searchFrame" style="display: none;"></iframe>
+
+    <script>
+        const canvas = document.querySelector('canvas');
+        const ctx = canvas.getContext('2d');
+
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+
+        let particles = [];
+
+        class Particle {
+            constructor(x, y, radius, color) {
+                this.x = x;
+                this.y = y;
+                this.radius = radius;
+                this.color = color;
+                this.velocity = {
+                    x: Math.random() * 2 - 1,
+                    y: Math.random() * 2 - 1
+                };
+            }
+
+            draw() {
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, this.radius, 0, Math.PI * 2);
+                ctx.fillStyle = this.color;
+                ctx.fill();
+                ctx.closePath();
+            }
+
+            update() {
+                this.x += this.velocity.x;
+                this.y += this.velocity.y;
+
+                if (this.x < 0 || this.x > canvas.width) this.velocity.x *= -1;
+                if (this.y < 0 || this.y > canvas.height) this.velocity.y *= -1;
+
+                this.draw();
+            }
+        }
+
+        function initParticles() {
+            particles = [];
+            for (let i = 0; i < 100; i++) {
+                particles.push(new Particle(
+                    Math.random() * canvas.width,
+                    Math.random() * canvas.height,
+                    Math.random() * 3 + 1,
+                    `rgba(255, 255, 255, ${Math.random()})`
+                ));
+            }
+        }
+
+        function animate() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+            particles.forEach(particle => particle.update());
+            requestAnimationFrame(animate);
+        }
+
+        window.addEventListener('resize', () => {
+            canvas.width = window.innerWidth;
+            canvas.height = window.innerHeight;
+            initParticles();
+        });
+
+        initParticles();
+        animate();
+
+        const searchBar = document.getElementById('searchBar');
+        const searchFrame = document.getElementById('searchFrame');
+
+        searchBar.addEventListener('keypress', (e) => {
+            if (e.key === 'Enter') {
+                let query = searchBar.value.trim();
+
+                if (/^(https?:\/\/)?[a-z0-9.-]+\.(com|net|io|html)$/i.test(query)) {
+                    if (!/^https?:\/\//i.test(query)) {
+                        query = 'https://' + query;
+                    }
+                } else {
+                    query = `https://www.bing.com/search?form=&q=${encodeURIComponent(query)}`;
+                }
+
+                searchFrame.src = `https://play.szvy.win/embed.html#${query}`;
+                searchFrame.style.display = 'block';
+            }
+        });
+    </script>
+</body>
+</html>
